--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
     </a>
 
     <div class="social-links text-center">
+      <a href="#contact" class="phone"><i class="bi bi-telephone"></i></a>
+      <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
       <a href="#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
       <a href="#contact" class="github"><i class="bi bi-github"></i></a>
-      <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -262,7 +263,7 @@
             <div class="resume-item">
               <h4 style="color: #000000; font-size: 18px;"><strong>Double Master's Thesis</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Feb. 2025 - Present</h5>
-              <!--<p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>-->!
+              <!--<p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>-->
               <p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b></p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>
               <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
@@ -687,7 +688,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="turtlebot_maze_file.html" style="text-decoration: none; color: inherit;">
+              <a href="gameoflife_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -703,12 +704,37 @@
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
                     <strong>GAME OF LIFE</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em></em></span>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Embedded and Real-Time Systems</em></span>
                   </div>
 
                 </div>
               </a>
             </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="socialforcemodel_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_socialforce.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>SOCIAL FORCE MODEL</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robotics and Navigation</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
           </div><!-- End Portfolio Container -->
 
 
@@ -754,28 +780,32 @@
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex align-items-center mb-4" data-aos="fade-up" data-aos-delay="200" style="padding: 5px;">
-                <i class="bi bi-linkedin flex-shrink-0" style="margin-left: 25px; margin-right: 15px;"></i>
-                <div>
-                  <h3 style="margin: 0;">LinkedIn</h3>
-                  <p style="margin: 0;">
-                    <a href="https://www.linkedin.com/in/mariasmitja" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">
+                <a href="https://www.linkedin.com/in/mariasmitja" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+                  <i class="bi bi-linkedin flex-shrink-0" style="margin-left: 25px; margin-right: 15px;"></i>
+                  <div>
+                    <h3 style="margin: 0;">LinkedIn</h3>
+                    <p style="margin: 0;">
                       Marc Arias Mitjà
-                    </a>
-                  </p>
-                </div>
-              </div><!-- End Info Item -->
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <!-- End Info Item -->
+
 
               <div class="info-item d-flex align-items-center mb-4" data-aos="fade-up" data-aos-delay="200" style="padding: 5px;">
-                <i class="bi bi-github flex-shrink-0" style="margin-left: 25px; margin-right: 15px;"></i>
-                <div>
-                  <h3 style="margin: 0;">GitHub</h3>
-                  <p style="margin: 0;">
-                    <a href="https://github.com/marcarias" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">
+                <a href="https://github.com/marcarias" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+                  <i class="bi bi-github flex-shrink-0" style="margin-left: 25px; margin-right: 15px;"></i>
+                  <div>
+                    <h3 style="margin: 0;">GitHub</h3>
+                    <p style="margin: 0;">
                       @marcarias
-                    </a>
-                  </p>
-                </div>
-              </div><!-- End Info Item -->
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <!-- End Info Item -->
+
             </div>
           </div>
 
